Install unit test tools

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,7 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py') --extension-pkg-whitelist='pydantic'
+
+    - name: Running unit tests
+      run: |
+        cd app && nosetests
