--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ python-dotenv>=0.15.0,<0.16.0
 requests==2.25.0
 urllib3==1.26.2
 chardet==3.0.4
-certifi==2020.11.8
+certifi==2024.2.2
 pylint==3.0.3
 nose==1.3.7
 pinocchio==0.4.3
 coverage==7.4.1
+behave==1.2.6
+selenium==4.17.2
+webdriver_manager==4.0.1
