--- a/app/setup.cfg
+++ b/app/setup.cfg
@@ -1,9 +1,11 @@
 [nosetests]
-verbosity=1
+verbosity=3
 detailed-errors=1
 with-coverage=1
 with-spec=1
 spec-color=1
+cover-erase=1
+cover-package=app
 
 [coverage:report]
 show_missing=1
